# codal-cm300

./: .project  CMakeLists.txt  README.md  target-locked.json  target.json
inc/: common_includes.h  device_pinmap.h  device_types.h
ld/: nrf52840.ld
lib/dynamixel/: dynamixel.cpp  dynamixel.h
lib/dynamixel/dxl_c/: protocol.h
lib/dynamixel/utility/: config.h  master.cpp  master.h  port_handler.cpp  port_handler.h
lib/freertos/config/: FreeRTOSConfig.h
lib/freertos/portable/CMSIS/nrf52/: port_cmsis_systick.c  portmacro_cmsis.h
libs/ble/ble_sdk/: ble_nus.h  nrf_pwr_mgmt.c
libs/ble/ble_sdk/port/: app_timer.c  sdk_config_port.h
model/: CM300.cpp  CM300.h  CM300Batsense.cpp  CM300Batsense.h  CM300DYNAMIXEL.cpp  CM300DYNAMIXEL.h  CM300IO.cpp  CM300IO.h  CM300Joystick.cpp  CM300Joystick.h  CM300NUS.cpp  CM300NUS.h  CM300QSPIFlash.cpp  CM300QSPIFlash.h  CM300SAADC.cpp  CM300SAADC.h  CM300SPIFlash.cpp  CM300SPIFlash.h  CM300SPI_FLASH.cpp  CM300SPI_FLASH.h  CM300Serial.cpp  CM300Serial.h  CM300SpeakerMIC.cpp  CM300SpeakerMIC.h  ICM20600.cpp  ICM20600.h  NRF52I2S.cpp  NRF52I2S.h
samples/: main.cpp
samples/BleTest/: BleNUS.cpp
samples/DynamixelMasterTest/: DynamixelMasterTest.cpp
samples/I2sTest/: ButtonSpeaker.cpp
samples/ICM20600Test/: ICM20600Test.cpp
samples/LedButtonTest/: LedButtonTest.cpp
samples/QspiFlashTest/: QspiFlashTest.cpp
samples/SerialTest/: SerialTest.cpp
samples/SpiFlashTest/: SpiFlashTest.cpp
samples/analogReadTest/: analogReadTest.cpp
samples/dynamixel_master/: dynamixel_master.cpp
source/: codal_target_hal.cpp
(+1 files in other folders)
